<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".tela_inicial" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/toolbar_header"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/pokedexlogo"
                    android:layout_width="105dp"
                    android:layout_height="38dp"
                    android:background="@drawable/pokedexlogoo"/>

            </RelativeLayout>
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/line"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txtOrientação"
                android:layout_width="264dp"
                android:layout_height="56dp"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/Texto_Orientação"
                android:textColor="#504C4C"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_rectangle_background"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search_elements"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/frasepesq"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/search_icon_background"
                    android:contentDescription="@string/app_name"
                    android:padding="9dp"
                    android:src="@drawable/ic_search"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>