<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalhePokemonActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="476dp"
        android:layout_height="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fundobulb" />

    <TextView
        android:id="@+id/txt_pokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nameB"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/empty_pokemon_name"
        android:textColor="@color/white"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:onClick="openNav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/baseline_menu_24" />

    <ImageView
        android:id="@+id/img_descpokemon"
        android:layout_width="257dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        app:srcCompat="@drawable/bulbasaur" />

    <TextView
        android:id="@+id/txt_pokemonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/empty_pokemon_entry"
        android:textColor="@color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/numberB"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_pokemonId"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="312dp"
        android:layout_height="106dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        app:srcCompat="@drawable/retangulor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/desc"
        android:textColor="#808080"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/pokemon_description"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:text="@string/frase_descrição"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintEnd_toEndOf="@+id/imageView20"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20"
        app:layout_constraintVertical_bias="0.619" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="56dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/bulbasaur" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="36dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/setinha" />

    <TextView
        android:id="@+id/txt_ev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/evo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:layout_constraintVertical_bias="0.162" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="56dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
        app:layout_constraintEnd_toEndOf="@+id/imageView26"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/imageView26"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/venus" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="36dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921"
        app:srcCompat="@drawable/setinha" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="81dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="56dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView24"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/img_ivysaur" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="81dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="81dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924"
        app:srcCompat="@drawable/bnt_favoritar" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="22dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/txt_fav"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/ic_favoritar" />

    <TextView
        android:id="@+id/txt_fav"
        android:layout_width="65dp"
        android:layout_height="21dp"
        android:fontFamily="@font/inter"
        android:text="@string/favo"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>